# freecell

./: .gitignore  CLAUDE.md  GAPS.md  LICENSE-APACHE  LICENSE-MIT  PROJECTS.md  README.md
app/: Cargo.toml  PACKAGING.md  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
app/crates/freecell-app/: Cargo.toml  build.rs
app/crates/freecell-app/examples/: chrome_demo.rs
app/crates/freecell-app/src/: lib.rs  main.rs
app/crates/freecell-chart-model/: Cargo.toml
app/crates/freecell-chart-model/src/: authoring.rs  downsample.rs  fidelity.rs  label.rs  lib.rs  marker.rs  numfmt.rs  spec.rs  stroke.rs  theme.rs
app/crates/freecell-core/: Cargo.toml
app/crates/freecell-core/src/: axis.rs  border.rs  cache.rs  color.rs  cond_fmt.rs  data_row.rs  eval_indicator.rs  find.rs  format_color.rs  format_ui.rs  functions.rs  input_cap.rs  lib.rs  merge.rs  merge_guard.rs  palette.rs  perf.rs  publication.rs  recent.rs  refs.rs  selection.rs  sheet_name.rs  stats.rs  style.rs  tsv.rs
app/crates/freecell-core/tests/: dependency_rule.rs
app/crates/freecell-engine/: Cargo.toml
app/crates/freecell-engine/src/: cache.rs  cond_fmt_convert.rs  document.rs  fixtures.rs  formula_refs.rs  instrument.rs  lib.rs  open_fixups.rs  open_repair.rs
app/crates/freecell-engine/tests/: charts_corpus.rs  charts_roundtrip_libreoffice.rs  dates_fixture.rs  open_numbers_fixture.rs  personal_monthly_budget_fixture.rs  roundtrip.rs  worker_seam.rs
app/icon.icon/: icon.json
app/render-tests/: Cargo.toml  README.md  build.rs
app/render-tests/baselines/: .gitkeep
app/render-tests/results/: cf-perf.json  chart-perf.json  perf-runtest.json
app/render-tests/scripts/: perf.sh  render_tests.sh  setup_render_env.sh
app/render-tests/src/: capture.rs  cases.rs  chart_scene.rs  diff.rs  lib.rs  perf.rs  render.rs  scene.rs
app/render-tests/tests/: perceptual_diff.rs  render_suite.rs
app/scripts/: linux_render_spike.sh  package.ps1  package.sh  sign-windows.ps1
experiments/00-stack-decision/smoke/: Cargo.toml
experiments/00-stack-decision/smoke/examples/: diag.rs
experiments/00-stack-decision/smoke/src/: lib.rs
experiments/00-stack-decision/smoke/tests/: smoke.rs
experiments/01-file-support/formualizer/: Cargo.toml
experiments/01-file-support/formualizer/src/: lib.rs
experiments/01-file-support/formualizer/tests/: roundtrip.rs
experiments/01-file-support/ironcalc/: Cargo.toml
experiments/01-file-support/ironcalc/src/: lib.rs
experiments/01-file-support/ironcalc/tests/: roundtrip.rs
experiments/02-datamodel-binding-perf/common/: Cargo.toml
experiments/02-datamodel-binding-perf/common/src/: engine.rs  lib.rs  report.rs  runner.rs  scenario.rs  sysinfo.rs
experiments/02-datamodel-binding-perf/formualizer/: Cargo.toml
experiments/02-datamodel-binding-perf/formualizer/benches/: perf.rs
experiments/02-datamodel-binding-perf/formualizer/src/: lib.rs
experiments/02-datamodel-binding-perf/formualizer/tests/: adapter.rs
experiments/02-datamodel-binding-perf/ironcalc/: Cargo.toml
experiments/02-datamodel-binding-perf/ironcalc/benches/: perf.rs
experiments/02-datamodel-binding-perf/ironcalc/src/: lib.rs
experiments/02-datamodel-binding-perf/ironcalc/tests/: adapter.rs  smoke.rs
experiments/03-formatting/formualizer/: Cargo.toml
experiments/03-formatting/formualizer/src/: lib.rs
experiments/03-formatting/formualizer/tests/: probe.rs
experiments/03-formatting/ironcalc/: Cargo.toml
experiments/03-formatting/ironcalc/src/: lib.rs
experiments/03-formatting/ironcalc/tests/: probe.rs
experiments/04-ui-poc/gpui-component/: Cargo.toml  README.md
experiments/04-ui-poc/gpui-component/src/: main.rs  table.rs
experiments/04-ui-poc/poc-core/: Cargo.toml
experiments/04-ui-poc/poc-core/src/: config.rs  harness.rs  layout.rs  lib.rs  report.rs  style.rs
experiments/04-ui-poc/raw-gpui/: Cargo.toml  README.md
experiments/04-ui-poc/raw-gpui/src/: grid.rs  main.rs
experiments/chart-poc/: Cargo.toml  README.md  SYNTHESIS.md  bubble-analysis.md  ooxml-coverage-matrix.md  rust-toolchain.toml
experiments/chart-poc/chart-model/: Cargo.toml
experiments/chart-poc/chart-model/src/: lib.rs
experiments/chart-poc/chart-render/: Cargo.toml  findings.md
experiments/chart-poc/chart-render/results/: manifest.json  review.md
experiments/chart-poc/chart-render/src/: area.rs  bar.rs  capture.rs  chrome.rs  lib.rs  line.rs  palette.rs  pie.rs  render.rs  scatter.rs  scenes.rs  stacking.rs  style.rs  ticks.rs
experiments/chart-poc/load-save/: Cargo.toml  findings.md
experiments/chart-poc/load-save/fixtures/: charts_basic.xlsx
experiments/chart-poc/load-save/results/: manifest.json  review.md  roundtrip_charts_basic.xlsx
experiments/chart-poc/load-save/src/: authoring.rs  lib.rs  load.rs  save.rs  xlsx.rs
experiments/round-2/01-async-interop/: Cargo.toml  README.md  findings.md
experiments/round-2/01-async-interop/results/: api_probes_volatile_10000000.json  gate_coalesce_deep_serial_1000000.json  gate_coalesce_volatile_10000000.json  gate_render_loop_deep_serial_1000000.json  gate_render_loop_volatile_10000000.json  latency_cross_sheet_10000.json  latency_cross_sheet_100000.json  latency_cross_sheet_1000000.json  latency_cross_sheet_10000000.json  latency_deep_serial_10000.json  latency_deep_serial_100000.json  latency_deep_serial_1000000.json  latency_deep_serial_10000000.json  latency_sparse_10000.json  latency_sparse_100000.json  latency_sparse_1000000.json  latency_sparse_10000000.json  latency_summary.json  (+12 more)
experiments/round-2/02-xlsx-open/: .gitignore  Cargo.toml  README.md  findings.md
experiments/round-2/03-function-parity/: Cargo.toml  README.md  findings.md
experiments/round-2/04-styled-read/: Cargo.toml  README.md  findings.md
experiments/round-2/05-style-fidelity/: .gitignore  Cargo.toml  README.md  findings.md
experiments/round-2/harness/: Cargo.toml
experiments/round-3/A-cache-sync/: Cargo.toml  findings.md
experiments/round-3/B-api-audit/: Cargo.toml  findings.md
experiments/round-3/C-ci-rendering/: Cargo.toml  README.md  findings.md
(+509 files in other folders)
