[package]
name = "freecell-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "The FreeCell GPUI application (macOS + Linux): app shell, windows, chrome, and the custom grid. Phase 1 = hello-world window that builds on both platforms + the Linux render spike."

# ---------------------------------------------------------------------------------
# cargo-packager: build distributable bundles/installers for the `freecell` binary.
#
# Drives `app/scripts/package.sh` (macOS/Linux) + `app/scripts/package.ps1` (Windows)
# and the `release` GitHub Actions workflow. See `app/PACKAGING.md` for the full story
# (formats, local usage, the unsigned-build note, Windows-port status) and
# `packaging/icons/README.md` for the icon writeup.
#
# cargo-packager reads this table via `cargo metadata`, so it auto-fills `version`
# (workspace 0.1.0) and auto-detects the `freecell` bin target — no `binaries`/`version`
# needed here. IMPORTANT: cargo-packager `cd`s into THIS crate's manifest directory
# (`app/crates/freecell-app/`) before packaging, so the `icons` (and any `resources`) paths
# below are relative to THIS Cargo.toml, not to the workspace root or the shell's CWD.
# Package FORMATS are chosen per-OS by the scripts (`--formats`), NOT pinned here, so this
# one config serves macOS (app/dmg), Linux (deb/appimage) and the experimental Windows
# (nsis) job. Builds are UNSIGNED (dev builds); signing is future work — see PACKAGING.md.
# ---------------------------------------------------------------------------------
[package.metadata.packager]
product-name = "FreeCell"
identifier = "com.scosman.freecell"
category = "productivity"
description = "A GPU-rendered, Excel-compatible spreadsheet — stupid-fast on huge sheets."
homepage = "https://github.com/scosman/freecell"
# Final app icons. cargo-packager uses the .icns for the macOS bundle, the .ico for the
# Windows installer, and the sized PNGs for Linux hicolor theme entries. Regenerate all
# formats from the two source PNGs with `packaging/icons/generate_icons.py`.
icons = [
    "packaging/icons/icon.icns",
    "packaging/icons/icon.ico",
    "packaging/icons/16x16.png",
    "packaging/icons/32x32.png",
    "packaging/icons/48x48.png",
    "packaging/icons/64x64.png",
    "packaging/icons/128x128.png",
    "packaging/icons/128x128@2x.png",
    "packaging/icons/256x256.png",
    "packaging/icons/512x512.png",
]

[lib]
name = "freecell_app"
path = "src/lib.rs"

# `build.rs` embeds the FreeCell app icon as executable resource ID 1 so the exe + window show the
# FreeCell icon instead of the generic Windows icon (gpui's Windows backend loads the app icon from
# that resource). A `[target.'cfg(...)'.build-dependencies]` table is selected by the compilation
# TARGET — Cargo evaluates the `cfg` against `--target`, not the host — so `embed-resource` is pulled
# in only when building FOR Windows, keeping it (and `cc`) off ordinary macOS/Linux target builds.
# The packaging pipeline builds natively on `windows-latest` (host == target), so the dep is pulled
# and the icon embedded. Note the embed is actually skipped by the HOST-based `#[cfg]` inside
# build.rs, NOT by this gate: a Linux → Windows cross-compile would still pull `embed-resource` in
# here, yet produce no icon (build.rs's `#[cfg]` is false on a non-Windows host). See build.rs.
[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"

[[bin]]
name = "freecell"
path = "src/main.rs"

[dependencies]
freecell-core.workspace = true
# Chart render layer (`chart` module, charts/architecture §2, §4.2): renders the gpui-free
# `freecell-chart-model` seam through gpui-component's `plot/` primitives.
freecell-chart-model.workspace = true
freecell-engine.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
tracing-subscriber.workspace = true
# Grid data sources (Phase 6, components/grid.md §Public interface): `arc-swap` is the
# lock-free `Publication` snapshot slot the worker swaps and the grid one-atomic-loads
# per frame; `parking_lot` is the `RwLock<SheetCaches>` (matches the worker seam's
# no-poisoning choice, workspace Cargo.toml).
arc-swap.workspace = true
parking_lot.workspace = true
# `tracing` (span/event macros) is used by the Phase-10 app shell (fonts hook + lifecycle
# logging). `anyhow` is not yet used directly (gpui returns its own `Result` from
# `open_window`), so it stays out of the manifest until first exercised.
tracing.workspace = true
# Recent-files store path (`shell::recents`, recent-files-welcome/architecture.md §2.3):
# `dirs::data_dir()` resolves the per-user app-data directory that holds
# `<data_dir>/FreeCell/recents.json`. Already resolved at 6.0.0 in the lockfile (a transitive
# dep), so pinning it as a direct dep adds no new crate to `Cargo.lock`.
dirs = "6"

[dev-dependencies]
# Phase 9 chrome interaction tests drive `ChromeView` through gpui's headless
# `TestAppContext` / `VisualTestContext`, which live behind gpui's `test-support` feature
# (additive: only enabled for test builds, so the release binary stays lean). This is the
# same knob gpui-component enables for its own widget tests.
gpui = { workspace = true, features = ["test-support"] }
# Phase 11 gpui window tests compose a `WorkbookWindow` over a worker-less `DocumentClient`
# (`test-support` → `DocumentClient::detached()`), so the deterministic `TestScheduler` never
# races a real OS-thread worker. Test-build only; the release binary never sees `detached()`.
freecell-engine = { workspace = true, features = ["test-support"] }
# save-flow / round-trip test fixtures write to a temp dir.
tempfile.workspace = true
# `fonts.rs` verifies the bundled non-RIBBI Inter faces resolve on the Linux text backend.
# gpui's `#[gpui::test]` installs a `NoopTextSystem` (add_fonts is a no-op, every font resolves
# to one stub id), so it can't verify registration — instead we exercise `fontdb` directly, the
# exact crate gpui's cosmic-text (Linux) text system uses. Pinned to the version already in the
# lockfile via gpui, so this adds no new crate and matches the shipped backend's behavior.
fontdb = "=0.23.0"

[lints]
workspace = true
