[package]
name = "freecell-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "The FreeCell GPUI application (macOS + Linux): app shell, windows, chrome, and the custom grid. Phase 1 = hello-world window that builds on both platforms + the Linux render spike."

# ---------------------------------------------------------------------------------
# cargo-packager: build distributable bundles/installers for the `freecell` binary.
#
# Drives `app/scripts/package.sh` (macOS/Linux) + `app/scripts/package.ps1` (Windows)
# and the `release` GitHub Actions workflow. See `app/PACKAGING.md` for the full story
# (formats, local usage, the unsigned-build note, Windows-port status) and
# `packaging/icons/README.md` for the icon writeup.
#
# cargo-packager reads this table via `cargo metadata`, so it auto-fills `version`
# (workspace 0.1.0) and auto-detects the `freecell` bin target — no `binaries`/`version`
# needed here. IMPORTANT: cargo-packager `cd`s into THIS crate's manifest directory
# (`app/crates/freecell-app/`) before packaging, so the `icons` (and any `resources`) paths
# below are relative to THIS Cargo.toml, not to the workspace root or the shell's CWD.
# Package FORMATS are chosen per-OS by the scripts (`--formats`), NOT pinned here, so this
# one config serves macOS (app/dmg), Linux (deb/appimage) and the experimental Windows
# (nsis) job. Builds are UNSIGNED (dev builds); signing is future work — see PACKAGING.md.
# ---------------------------------------------------------------------------------
[package.metadata.packager]
product-name = "FreeCell"
identifier = "com.scosman.freecell"
category = "productivity"
# Short synopsis. cargo-packager writes this VERBATIM into the Debian `Description:`
# synopsis and the `.desktop` `Comment=`, and it is the App Center one-liner. Keep it
# ASCII: a Unicode em-dash here rendered as "??" in elementary App Center's package view
# (the control file is UTF-8, but the App Center synopsis display mangled the glyph), so
# use plain ASCII punctuation to stay portable across deb/AppImage/NSIS front-ends.
description = "The open spreadsheet app"
# Extended description (the deb `Description:` continuation lines). WITHOUT this,
# cargo-packager writes the literal placeholder "(none)" — which is exactly what App
# Center showed under "Description". Keep ASCII, same reason as the synopsis above.
long-description = """
FreeCell is a GPU-rendered spreadsheet built in Rust for speed on very large sheets, up \
to Excel's maximum of 1,048,576 rows by 16,384 columns. It reads and writes .xlsx files \
and aims for Excel-compatible formulas, formatting, and charts, with a fast custom grid \
rendered through GPUI (the renderer behind Zed and Ghostty).
"""
# Populates the Debian `Maintainer:` control field (absent otherwise, which lintian flags
# and App Center shows as a blank developer) and the AppStream `<developer>` name.
authors = ["scosman <scosman@gmail.com>"]
homepage = "https://github.com/scosman/freecell"
# Final app icons. cargo-packager uses the .icns for the macOS bundle, the .ico for the
# Windows installer, and the sized PNGs for Linux hicolor theme entries. Regenerate all
# formats from the two source PNGs with `packaging/icons/generate_icons.py`.
icons = [
    "packaging/icons/icon.icns",
    "packaging/icons/icon.ico",
    "packaging/icons/16x16.png",
    "packaging/icons/32x32.png",
    "packaging/icons/48x48.png",
    "packaging/icons/64x64.png",
    "packaging/icons/128x128.png",
    "packaging/icons/128x128@2x.png",
    "packaging/icons/256x256.png",
    "packaging/icons/512x512.png",
]

# ---------------------------------------------------------------------------------
# Debian (.deb) specifics. Must come AFTER every key of [package.metadata.packager]
# above — a new table header ends the previous table.
#
# - package-name: the `Package:` control field. cargo-packager defaults it to
#   kebab-case(product-name) => "free-cell", which is what App Center showed as the
#   title. Debian package names must be lowercase, so the best the raw name can be is
#   "freecell" (nicer than "free-cell", and it's what `apt install freecell` expects).
# - files: ship an AppStream metainfo file into /usr/share/metainfo. This is the real
#   fix for the App Center TITLE ("FreeCell", not the package name), the LICENSE
#   ("MIT OR Apache-2.0" instead of "unknown" — the Debian control file has no license
#   field at all), and a rich description. App Center / GNOME Software prefer AppStream
#   metadata when present. The `<launchable>` inside it points at cargo-packager's
#   generated `freecell.desktop`. Source path is relative to THIS crate's manifest dir
#   (cargo-packager cd's here), same as the icons above.
# ---------------------------------------------------------------------------------
[package.metadata.packager.deb]
package-name = "freecell"
files = { "packaging/linux/com.scosman.freecell.metainfo.xml" = "usr/share/metainfo/com.scosman.freecell.metainfo.xml" }

[lib]
name = "freecell_app"
path = "src/lib.rs"

# `build.rs` embeds the FreeCell app icon as executable resource ID 1 so the exe + window show the
# FreeCell icon instead of the generic Windows icon (gpui's Windows backend loads the app icon from
# that resource). A `[target.'cfg(...)'.build-dependencies]` table is selected by the compilation
# TARGET — Cargo evaluates the `cfg` against `--target`, not the host — so `embed-resource` is pulled
# in only when building FOR Windows, keeping it (and `cc`) off ordinary macOS/Linux target builds.
# The packaging pipeline builds natively on `windows-latest` (host == target), so the dep is pulled
# and the icon embedded. Note the embed is actually skipped by the HOST-based `#[cfg]` inside
# build.rs, NOT by this gate: a Linux → Windows cross-compile would still pull `embed-resource` in
# here, yet produce no icon (build.rs's `#[cfg]` is false on a non-Windows host). See build.rs.
[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"

[[bin]]
name = "freecell"
path = "src/main.rs"

[dependencies]
freecell-core.workspace = true
# Chart render layer (`chart` module, charts/architecture §2, §4.2): renders the gpui-free
# `freecell-chart-model` seam through gpui-component's `plot/` primitives.
freecell-chart-model.workspace = true
freecell-engine.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
tracing-subscriber.workspace = true
# Grid data sources (Phase 6, components/grid.md §Public interface): `arc-swap` is the
# lock-free `Publication` snapshot slot the worker swaps and the grid one-atomic-loads
# per frame; `parking_lot` is the `RwLock<SheetCaches>` (matches the worker seam's
# no-poisoning choice, workspace Cargo.toml).
arc-swap.workspace = true
parking_lot.workspace = true
# `tracing` (span/event macros) is used by the Phase-10 app shell (fonts hook + lifecycle
# logging). `anyhow` is not yet used directly (gpui returns its own `Result` from
# `open_window`), so it stays out of the manifest until first exercised.
tracing.workspace = true
# Recent-files store path (`shell::recents`, recent-files-welcome/architecture.md §2.3):
# `dirs::data_dir()` resolves the per-user app-data directory that holds
# `<data_dir>/FreeCell/recents.json`. Already resolved at 6.0.0 in the lockfile (a transitive
# dep), so pinning it as a direct dep adds no new crate to `Cargo.lock`.
dirs = "6"

[dev-dependencies]
# Phase 9 chrome interaction tests drive `ChromeView` through gpui's headless
# `TestAppContext` / `VisualTestContext`, which live behind gpui's `test-support` feature
# (additive: only enabled for test builds, so the release binary stays lean). This is the
# same knob gpui-component enables for its own widget tests.
gpui = { workspace = true, features = ["test-support"] }
# Phase 11 gpui window tests compose a `WorkbookWindow` over a worker-less `DocumentClient`
# (`test-support` → `DocumentClient::detached()`), so the deterministic `TestScheduler` never
# races a real OS-thread worker. Test-build only; the release binary never sees `detached()`.
freecell-engine = { workspace = true, features = ["test-support"] }
# save-flow / round-trip test fixtures write to a temp dir.
tempfile.workspace = true
# `fonts.rs` verifies the bundled non-RIBBI Inter faces resolve on the Linux text backend.
# gpui's `#[gpui::test]` installs a `NoopTextSystem` (add_fonts is a no-op, every font resolves
# to one stub id), so it can't verify registration — instead we exercise `fontdb` directly, the
# exact crate gpui's cosmic-text (Linux) text system uses. Pinned to the version already in the
# lockfile via gpui, so this adds no new crate and matches the shipped backend's behavior.
fontdb = "=0.23.0"

[lints]
workspace = true
