[package]
name = "freecell-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "GPUI-free, IronCalc-free foundation for FreeCell: pure logic types (Axis, A1/ranges, selection, validators, palette, render-model read types). Builds and tests anywhere with no GPU/display."

[dependencies]
# Range-clipboard TSV paste dims (`tsv` module): the SAME csv parser the engine's
# `paste_csv_string` uses, so `tsv_dims` is a quote-/terminator-aware upper bound that can't
# diverge from the engine's own record/field parse (`components/clipboard.md §Paste-TSV`).
csv.workspace = true
# Recent-files store (`recent` module, recent-files-welcome/architecture.md §2): the
# `RecentList` persists as a small JSON cache (`{ "entries": [...] }`). `serde` (derive)
# drives the model (de)serialize; `serde_json` is the concrete codec. Both are workspace
# deps already in-tree (the engine's clipboard uses them); neither is gpui/ironcalc, so the
# headless dependency rule (`tests/dependency_rule.rs`) is untouched.
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# The `recent` module's `record`/`display_entries`/`save` tests exercise real filesystem
# stat/prune/round-trip behaviour, so they create throwaway files in a `TempDir`.
tempfile.workspace = true

[lints]
workspace = true
