[package]
name = "freecell-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "IronCalc adapter, evaluation worker, style/geometry caches, and file I/O for FreeCell. GPUI-free: builds and tests headless in Linux CI (architecture.md §2, §5, §6)."

[dependencies]
freecell-core.workspace = true
ironcalc_base.workspace = true
# Phase 3 (Document I/O): `ironcalc` is the umbrella crate carrying the xlsx load/save API
# (`import::load_from_xlsx`, `export::save_xlsx_to_writer`, `error::XlsxError`); `thiserror`
# backs the typed `LoadError`/`SaveError`; `tempfile` provides the atomic temp-file+rename
# save.
ironcalc.workspace = true
thiserror.workspace = true
tempfile.workspace = true
# Open-time OOXML fix-ups (`open_fixups`): IronCalc discards the file's theme palette
# (resolving theme-indexed colours against a hardcoded DEFAULT Office theme) and mis-maps
# several built-in `numFmtId`s. We re-read `xl/theme/theme1.xml` + `xl/styles.xml` from the
# `.xlsx` to correct them. Versions match IronCalc's own so the compiled artifacts are reused.
roxmltree = "0.19"
zip = "0.6"
# Phase 4 (eval worker seam, components/engine_worker.md): `arc-swap` holds the published
# `Publication` snapshot (publish-then-bump); `async-channel` carries `WorkerEvent`s to the
# UI (the type `smol::channel` re-exports; no async runtime in the headless engine);
# `parking_lot` fronts the shared `RwLock<SheetCaches>`; `tracing` logs apply/eval/publish
# timings at debug (the SP1 observables).
arc-swap.workspace = true
async-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[features]
# Exposes `DocumentClient::detached()` — a worker-less client for headless UI tests, so a
# `#[gpui::test]` composing a `WorkbookWindow` does not spawn a real OS thread under gpui's
# deterministic `TestScheduler` (which panics on cross-thread activity). Off by default so the
# no-op client can never be wired into a release build; `freecell-app`'s dev-dependencies enable
# it for the test build only.
test-support = []

[lints]
workspace = true
